make phases real