@@ -8,41 +8,24 @@ import fish.cichlidmc.tinycodecs.Codec;
 import fish.cichlidmc.tinycodecs.codec.map.CompositeCodec;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 /**
  * A parsed transformer JSON, before being split.
  */
-public final class TransformerDefinition {
+public record TransformerDefinition(ClassTarget target, List<Transform> transforms, int priority, int phase) {
 	public static final Codec<TransformerDefinition> CODEC = CompositeCodec.of(
 			ClassTarget.CODEC.fieldOf("target"), def -> def.target,
 			Transform.CODEC.listOrSingle().fieldOf("transforms"), def -> def.transforms,
 			Codec.INT.optional(0).fieldOf("priority"), def -> def.priority,
-			Codec.INT.optional().fieldOf("phase_override"), def -> def.phaseOverride,
+			Codec.INT.optional(0).fieldOf("phase"), def -> def.phase,
 			TransformerDefinition::new
 	).asCodec();
 
-	private final ClassTarget target;
-	private final List<Transform> transforms;
-	private final int priority;
-	private final Optional<Integer> phaseOverride;
-
-	public TransformerDefinition(ClassTarget target, List<Transform> transforms, int priority, Optional<Integer> phaseOverride) {
-		this.target = target;
-		this.transforms = transforms;
-		this.priority = priority;
-		this.phaseOverride = phaseOverride;
-	}
-
 	public List<Transformer> decompose(Id baseId) {
 		if (this.transforms.size() == 1) {
-			Transform transform = this.transforms.get(0);
-			int phase = this.phaseOverride.orElse(transform.type().defaultPhase);
-			return Collections.singletonList(new Transformer(
-					baseId, this.target, transform, this.priority, phase
-			));
+			Transform transform = this.transforms.getFirst();
+			return List.of(new Transformer(baseId, this.target, transform, this.priority, this.phase));
 		}
 
 		List<Transformer> transformers = new ArrayList<>();
@@ -50,8 +33,7 @@ public final class TransformerDefinition {
 		for (int i = 0; i < this.transforms.size(); i++) {
 			Id id = baseId.suffixed("/" + i);
 			Transform transform = this.transforms.get(i);
-			int phase = this.phaseOverride.orElse(transform.type().defaultPhase);
-			Transformer transformer = new Transformer(id, this.target, transform, this.priority, phase);
+			Transformer transformer = new Transformer(id, this.target, transform, this.priority, this.phase);
 			transformers.add(transformer);
 		}
 
